added support for multiple backends in openapi, selectable in request
