# src/voter_reg_check/routes/regcheck.py
@@ -1,13 +1,23 @@
+import datetime
 import logging
 
 from connexion import NoContent
+import pytz
 
-from ..backends.voteamerica import check
+from ..backends import check
 
 
 _logger = logging.getLogger(__name__)
 
 
 def post(body):
-    r = {"result": check(**body), "voter_info": body}
-    return r, 200
+    method = body["method"]
+    voter_info = body["voter_info"]
+    result = check(method, voter_info)
+    resp = {
+        "timestamp": datetime.datetime.now(tz=pytz.UTC),
+        "method": method,
+        "result": result,
+        "voter_info": voter_info
+    }
+    return resp, 200
